[PLAT-3406] Plugin: Add server-init
Also add usage by plugin.properties